# ds24t-4-vdss-project

./: .dockerignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/processed/: parliament_memberships.parquet  parliament_yearly.parquet  persons_clean.parquet  politicians.parquet
deployment/: Dockerfile  app.py
docs/: _quarto.yml  data_report.qmd  deployment.qmd  evaluation.qmd  index.qmd  project_charta.qmd  refs.bib  viz_design_report.qmd
docs/_freeze/data_report/execute-results/: html.json
eda/: 1_gather_data.py  2_etl_politicians.py  3_eda.py
eda/output/: catalogue_memberships_clean_CHE.csv  catalogue_parliament_memberships.csv  catalogue_parliament_yearly.csv  catalogue_persons_clean_CHE.csv  catalogue_politicians.csv
presentation/: vdss_group4_presentation.pptx
