[project]
name = "ds24t-4-vdss-project"
version = "0.1.0"
description = "DS Project for the VDSS course"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb>=1.5.0",
    "ipython>=8.37.0",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "swissparlpy>=1.0.0",
    "ydata-profiling>=4.12.2",
]

authors = [
    { name = "Christian Bosshard", email = "boschr02@students.zhaw.ch" },
    { name = "Enea D. Fedel", email = "fedelene@students.zhaw.ch" }
]
